popup size issue on mobile
fixed?

--- a/stylesheetResponsive.css
+++ b/stylesheetResponsive.css
@@ -208,7 +208,9 @@ img{
     -webkit-box-shadow: inset 0 0 3px white
 }
 
-    @media all and (min-width:400px) and (max-width: 99500px) {
+
+
+@media all and (min-width:0px) and (max-width: 576px) {
      div.county2014Tooltip  {
         min-height:50vh;
         min-width: 25vh;    
@@ -219,15 +221,43 @@ img{
   }
 }
 
-@media all and (min-width:0px) and (max-width: 400px) {
-     div.county2014Tooltip  {
+@media (min-width: 576px) {
+
+  div.county2014Tooltip  {
         min-height:50vh;
         min-width: 25vh;    
-        max-width: 40vh; 
+        max-width: 50vh; 
         max-height:70vh; 
         overflow-wrap: break-word; 
         word-wrap: break-word;
   }
+}
+
+@media (min-width: 768px) {
+
+  div.county2014Tooltip  {
+        min-height:50vh;
+        min-width: 25vh;    
+        max-width: 50vh; 
+        max-height:70vh; 
+        overflow-wrap: break-word; 
+        word-wrap: break-word;
+  }
+
+
+ }
+
+@media (min-width: 992px) { 
+
+ div.county2014Tooltip  {
+        min-height:50vh;
+        min-width: 25vh;    
+        max-width: 50vh; 
+        max-height:70vh; 
+        overflow-wrap: break-word; 
+        word-wrap: break-word;
+  }
+
 }
 
 
@@ -410,6 +440,13 @@ padding-left:2%;
 .btn-info.btn {
     border:solid thin #AAAAAA;
 }
+
+.container{
+
+}
+
+.btn-group { display: block; text-align: left; }
+.btn-group.btn { float: none; }
 
 button:focus{
  outline:none !important;
